MDEV-29300  Assertion `*ref && (*ref)->fixed()' failed in Item_field::fix_outer_field on SELECT

This issue arises when we have an outer reference resolved in another outer reference
where that outer reference is resolved in a outer select that is a grouping select.
Under these circumstances, the intermediate item is wrapped in an Item_outer_ref and
fixing is deferred later until fix_inner_refs.  As this item wrapper isn't fixed
we fail this assertion.  The fix here is to resolve the item at the lowest level
to the item inside the wrapper, which is fixed.  This item can then get it's
own wrapper pointing to the ultimate resolution of this item.